# music-glass

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 0.BjlU_-yp.css
.svelte-kit/output/client/_app/immutable/chunks/: CZ32pkcU.js  DazXqebA.js
.svelte-kit/output/client/_app/immutable/entry/: app.cpBII2Ll.js  start.DUw98ags.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.Dk_yEFNK.js  1.AdO1xRUK.js  2.C8n4o1_s.js
.svelte-kit/output/server/: index.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _layout.DXBHt0CA.css  _page.DAX0a0HU.css
.svelte-kit/output/server/chunks/: internal.js  ssr.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs  video_processor.rs
src/lib/components/: DragZone.svelte  GlassCard.svelte
src/lib/utils/: screenshot.ts
src/routes/: +layout.svelte  +page.svelte
